--- a/package.json
+++ b/package.json
@@ -15,5 +15,19 @@
   "bugs": {
     "url": "https://github.com/zjr/sojourner/issues"
   },
-  "homepage": "https://github.com/zjr/sojourner#readme"
+  "homepage": "https://github.com/zjr/sojourner#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "mocha": "^2.5.3",
+    "nodemon": "^1.10.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "debug": "^2.2.0",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0"
+  }
 }
