--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "chai": "^3.5.0",
     "eslint": "^3.1.1",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.5.3",
     "nodemon": "^1.10.0"
   },
