--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compression": "^1.6.2",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "lodash": "^4.14.0",
     "morgan": "^1.7.0"
   }
 }
