--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
     "mocha": "^2.5.3",
-    "nodemon": "^1.10.0"
+    "nodemon": "^1.10.0",
+    "supertest": "^1.2.0"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
